--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "overlay-as-promised",
   "title": "jQuery OverlayAsPromised",
   "version": "0.3.1",
-  "description": "Overlay full configurable returning promises on events",
+  "description": "jQuery plugin: Full-configurable overlay returning promises on listening events",
+  "keywords": ["overlay", "dialog", "lightbox", "layer", "colorbox", "promise", "jquery", "plugin"],
   "main": "index.js",
   "scripts": {
     "preinstall": ""
