--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "title": "jQuery OverlayAsPromised",
   "version": "0.3.3",
   "description": "jQuery plugin: Full-configurable overlay returning promises on listening events",
-  "keywords": ["overlay", "dialog", "lightbox", "layer", "colorbox", "promise", "jquery", "plugin"],
+  "keywords": [
+    "overlay",
+    "dialog",
+    "lightbox",
+    "layer",
+    "colorbox",
+    "promise",
+    "jquery",
+    "plugin"
+  ],
   "main": "index.js",
   "scripts": {
     "preinstall": ""
