--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "overlay-as-promised",
   "title": "jQuery OverlayAsPromised",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "description": "jQuery plugin: Full-configurable overlay returning promises on listening events",
   "keywords": [
+    "browser",
     "overlay",
-    "dialog",
-    "lightbox",
-    "layer",
-    "colorbox",
-    "promise",
-    "jquery",
-    "plugin"
+    "modal"
   ],
   "main": "index.js",
   "scripts": {
