--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "overlay-as-promised",
   "title": "jQuery OverlayAsPromised",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "description": "jQuery plugin: Full-configurable overlay returning promises on listening events",
   "keywords": [
-    "browser",
     "overlay",
-    "modal"
+    "browser"
   ],
   "main": "index.js",
   "scripts": {
