--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "overlay-as-promised",
   "title": "jQuery OverlayAsPromised",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "description": "jQuery plugin: Full-configurable overlay returning promises on listening events",
   "keywords": [
+    "browser",
     "overlay",
-    "browser"
+    "modal"
   ],
   "main": "index.js",
   "scripts": {
